# anser_now_server

./: alembic.ini  docker-compose.yml  makefile  makefile.container  makefile.local  pyproject.toml
_docker/python/: Dockerfile
src/: init.py  main.py
src/const/: chat_const.py
src/core/: auth.py  dependency.py  logging.py  ws_connect.py
src/database/: database.py  env.py
src/database/versions/: 3d8ddcc504fe_create_corporation.py  429b72f729b9_change_uuid_to_chats.py  528871a6865e_create_chat_reads.py  94614a3cf24c_add_room_id_to_chats.py  c1e9b8c16862_add_user_to_chat_messages.py  d14f4c6a8edb_create_chat.py  d8181ecb6ec8_create_user.py  ebb7e16e3f7e_drop_chat_column.py  f26b168b7ef3_add_column_to_user.py
src/endpoint/: auth_endpoint.py  chat_endpoint.py  guest_user_endpoint.py  user_endpoint.py
src/middleware/: exception_handler.py
src/model/: chat.py  chat_message.py  chat_reads.py  corporation.py  user.py
src/repository/: chat_repository.py  corporation_repository.py  user_repository.py
src/resource/templates/: frame.html
src/schema/request/: auth_request.py  chat_request.py  common_request.py
src/schema/response/: auth_response.py  base_response.py  chat_response.py  user_response.py
src/service/: auth_service.py  chat_service.py  corporation_service.py  user_service.py
