[tool.poetry]
name = "anser_now"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.75.0"
uvicorn = "^0.15.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
aiomysql = "^0.2.0"
sqlmodel = "^0.0.18"
injector = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"